flexbox and darkmode

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#" class="iu-giphy">아이유</a></li>
                 <li><a href="#" class="ty-giphy">김태연</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="darkMode">Dark Mode</a></li>
             </ul>
         </div>
         <div class="main_content">
@@ -39,13 +39,15 @@
                     sapiente accusamus, nihil amet rerum accusantium mollitia pariatur fuga dolor! Repellat maiores
                     temporibus eligendi sint nostrum dolorum reprehenderit laboriosam, deserunt commodi nam asperiores
                     quaerat et ratione sit nulla odit consequuntur sequi ea necessitatibus dicta ad doloremque. Eligendi
-                    quidem voluptates quibusdam dolorem nisi veritatis incidunt. Et. 
+                    quidem voluptates quibusdam dolorem nisi veritatis incidunt. Et.
                 </div>
-                <div class="first-gif"></div>
-                <div class="second-gif"></div>
-                <div class="third-gif"></div>
-                <div class="fourth-gif"></div>
-                <div class="fifth-gif"></div>
+                <div class="flex-container">
+                    <div class="first-gif"></div>
+                    <div class="second-gif"></div>
+                    <div class="third-gif"></div>
+                    <div class="fourth-gif"></div>
+                    <div class="fifth-gif"></div>
+                </div>
             </div>
         </div>
     </div>
